--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
-<head>
-</head>
+  <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Overpass:wght@200;400;600&display=swap">
+    <link rel="stylesheet" href="main.css">
+  </head>
 <body>
-  <div id="listing"></div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="https://rgrp.github.io/s3-bucket-listing/list.js"></script>
+  <h1 class="title">Simularium Trajectory Libraries</h1>
+  <a href="main.html"><div class="bucket">
+    <h2>Main Simularium Library</h2>
+    <span>https://aics-simularium-data.s3.us-east-2.amazonaws.com</span>
+  </div></a>
 </body>
 </html>
 
