--- a/main.html
+++ b/main.html
@@ -8,8 +8,9 @@
   <div id="listing"></div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   <script type="text/javascript">
-  var BUCKET_URL = 'https://aics-simularium-data.s3.us-east-2.amazonaws.com';
-</script>
+    var S3BL_IGNORE_PATH = true;
+    var BUCKET_URL = 'https://aics-simularium-data.s3.us-east-2.amazonaws.com';
+  </script>
 <script src="list.js"></script>
 </body>
 </html>
