--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Main Simularium Library</h1>
   <div id="listing"></div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   <script type="text/javascript">
     var S3BL_IGNORE_PATH = true;
     var BUCKET_URL = 'https://aics-simularium-data.s3.us-east-2.amazonaws.com';
