--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <a href="index.html">&larr; Back</a>
   <h1>Main Simularium Library</h1>
   <div id="listing"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
