add buckets for arcade, physicell, and readdy outputs, exclude directories, and better error feedback

--- a/arcade.html
+++ b/arcade.html
@@ -6,11 +6,11 @@
 </head>
 <body>
   <a href="index.html">&larr; Back</a>
-  <h1>Main Simularium Library</h1>
+  <h1>ARCADE Simularium Library</h1>
   <div id="listing"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   <script type="text/javascript">
-    var BUCKET_URL = 'https://aics-simularium-data.s3.us-east-2.amazonaws.com';
+    var BUCKET_URL = 'https://arcade-working-bucket.s3.us-west-2.amazonaws.com';
   </script>
 <script src="list.js"></script>
 </body>
