--- a/readdy.html
+++ b/readdy.html
@@ -6,11 +6,12 @@
 </head>
 <body>
   <a href="index.html">&larr; Back</a>
-  <h1>Main Simularium Library</h1>
+  <h1>AICS ReaDDy Simularium Library</h1>
   <div id="listing"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
   <script type="text/javascript">
-    var BUCKET_URL = 'https://aics-simularium-data.s3.us-east-2.amazonaws.com';
+    var BUCKET_URL = 'https://readdy-working-bucket.s3.us-west-2.amazonaws.com';
+    var EXCLUDE_DIRS = ['z_archive'];
   </script>
 <script src="list.js"></script>
 </body>
